--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -18,9 +18,9 @@
                     <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/dashboard" routerLinkActive="['active']">Dashboard</a></li>
                 </ul> 
         
-                <ul *ngIf="(dataservice.authenticated$ | async) === true" class="nav navbar-nav">
+                <!-- <ul *ngIf="(dataservice.authenticated$ | async) === true" class="nav navbar-nav">
                     <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/usermanagement" routerLinkActive="['active']">User Management</a></li>
-                </ul> 
+                </ul>  -->
         
                 <ul *ngIf="(dataservice.authenticated$ | async) === true" class="nav navbar-nav">
                     <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/stats" routerLinkActive="['active']">Statistics</a></li>
@@ -45,9 +45,9 @@
                 <ul *ngIf="(dataservice.authenticated$ | async) === true" class="nav navbar-nav">
                     <li  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a  routerLink="/inventory" routerLinkActive="active">MDI Data</a></li>
                 </ul>
-                <ul *ngIf="(dataservice.authenticated$ | async) === true" class="nav navbar-nav">
+                <!-- <ul *ngIf="(dataservice.authenticated$ | async) === true" class="nav navbar-nav">
                     <li  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/usermanagement" routerLinkActive="active">User Management</a></li>
-                </ul>
+                </ul> -->
         
                 <ul *ngIf="(dataservice.authenticated$ | async) === false" class="nav navbar-nav navbar-right">
                     <li  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/login" routerLinkActive="active"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -61,6 +61,9 @@
             </div>
         </nav>
         
+    </p-tabPanel>
+    <p-tabPanel id="userManagement" header="User Management">
+
     </p-tabPanel>
 </p-tabView>
 
