--- a/frontend/src/app/project-details/project-details.component.html
+++ b/frontend/src/app/project-details/project-details.component.html
@@ -4,10 +4,15 @@
 </div>
 <div class="header-main">
     <p-image src="assets/CHI_Logo.png" alt="Image" width="50" height="50"></p-image>
-    <h1 *ngIf="!disableEdit" class="header-title">{{project.projectName}}</h1>
+    <span>
+        <h1 *ngIf="!disableEdit" class="header-title">{{project.projectName}}</h1>
+        <p-button label="Go Back" icon="pi pi-chevron-left" class="btn-float-right" (click)="back()" [disabled]="disableEdit">
+        </p-button> &nbsp;
+    </span>
     <div *ngIf="disableEdit" style="padding-left: 10px; display: inline-block; width: 95%;">
         <input style="width: 100%; font-size: larger; padding: 10px;" type="text" [(ngModel)]="project.projectName"
-            pInputText placeholder="Project Name">
+            pInputText placeholder="Project Name">  &nbsp;
+        
     </div>
     <!-- <p-button label="{{project.projectName}}" icon="pi pi-users" styleClass="p-button-primary titleBtn">
     </p-button> -->
@@ -17,8 +22,8 @@
         <div class="p-toolbar-group-left">
             <p-button label="Edit" icon="pi pi-pencil" class="mr-6" (click)="editDetails()" [disabled]="disableEdit">
             </p-button> &nbsp;
-            <p-button *ngIf="disableEdit" label="Cancel" icon="pi pi-times" class="mr-6" styleClass="p-button-danger" (click)="cancelHandler()"
-                [disabled]="!disableEdit"></p-button> &nbsp;
+            <p-button *ngIf="disableEdit" label="Cancel" icon="pi pi-times" class="mr-6" styleClass="p-button-danger"
+                (click)="cancelHandler()" [disabled]="!disableEdit"></p-button> &nbsp;
             <p-button label="Save" icon="pi pi-save" class="mr-6" styleClass="p-button-success" (click)="saveDetails()"
                 [disabled]="!disableEdit"></p-button>
         </div>
@@ -44,7 +49,7 @@
 
                                 </div>
                                 <div class="detailRow">
-                                    <div class="detailLeft">hoursInPRM : </div>
+                                    <div class="detailLeft">Hours In PRM : </div>
                                     <div *ngIf="!disableEdit" class="detailRight"><i class="fa fa-bookmark"
                                             style="margin-right: 5px;"></i>
                                         {{project.hoursInPRM}}</div>
@@ -61,8 +66,9 @@
                                             [styleClass]="statusBtnStyleClass"></p-button>
                                     </div>
                                     <div *ngIf="disableEdit" class="detailRight">
-                                        <p-dropdown  (onChange)="statusChangeHandler($event)" [options]="statusTypes" [(ngModel)]="project.status"
-                                            placeholder="Select a Status" [showClear]="true"></p-dropdown>
+                                        <p-dropdown (onChange)="statusChangeHandler($event)" [options]="statusTypes"
+                                            [(ngModel)]="project.status" placeholder="Select a Status"
+                                            [showClear]="true"></p-dropdown>
                                     </div>
                                 </div>
                                 <div class="detailRow">
@@ -82,8 +88,8 @@
                                             style="margin-right: 5px;"></i>
                                         {{project.marketPriority}}</div>
                                     <div *ngIf="disableEdit" class="detailRight">
-                                        <input style="width: 50%" type="text" [(ngModel)]="project.marketPriority" pInputText
-                                        placeholder="Market Priority">
+                                        <input style="width: 50%" type="text" [(ngModel)]="project.marketPriority"
+                                            pInputText placeholder="Market Priority">
                                     </div>
 
                                 </div>
@@ -388,8 +394,7 @@
                     <label for="hoursInPRM" class="control-label">Hours in PRM</label>
                     <select class="form-control" formControlName="hoursInPRM">
                         <option [ngValue]="null" disabled>Select Hours in PRM</option>
-                        <option  *ngFor="let hoursInPRM of hoursInPRMs"
-                            [ngValue]="hoursInPRM">{{hoursInPRM}}</option>
+                        <option *ngFor="let hoursInPRM of hoursInPRMs" [ngValue]="hoursInPRM">{{hoursInPRM}}</option>
                     </select>
                 </div>
             </div>
@@ -415,8 +420,8 @@
             <div class="form-group">
                 <div class="col-sm-12">
                     <label for="marketPriority" class="control-label">Market Priority</label>
-                    <input autocomplete="off" type="text" id="marketPriority" class="form-control" formControlName="marketPriority"
-                        required>
+                    <input autocomplete="off" type="text" id="marketPriority" class="form-control"
+                        formControlName="marketPriority" required>
                 </div>
             </div>
             <div class="form-group">
@@ -431,14 +436,16 @@
                     <label for="projectManager" class="control-label">Project Manager</label>
                     <select class="form-control" formControlName="projectManager">
                         <option [ngValue]="null" disabled>Select Project Manager</option>
-                        <option *ngFor="let projectManager of allUsers" [ngValue]="projectManager">{{projectManager}}</option>
+                        <option *ngFor="let projectManager of allUsers" [ngValue]="projectManager">{{projectManager}}
+                        </option>
                     </select>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-12">
                     <label for="status" class="control-label">Status</label>
-                    <select (change)="statusChangeHandler($event.target, true)" class="form-control" formControlName="status">
+                    <select (change)="statusChangeHandler($event.target, true)" class="form-control"
+                        formControlName="status">
                         <option [ngValue]="null" disabled>Select Status</option>
                         <option *ngFor="let status of statusTypes" [ngValue]="status">{{status}}</option>
                     </select>
