--- a/frontend/src/app/project-details/project-details.component.scss
+++ b/frontend/src/app/project-details/project-details.component.scss
@@ -88,3 +88,9 @@
     display: inline;
     margin-right: 10px;
 }
+
+.btn-float-right {
+    float: right;
+    margin-right: 20px;
+    margin-top: 20px;
+}
