--- a/frontend/src/app/project-details/project-details.component.html
+++ b/frontend/src/app/project-details/project-details.component.html
@@ -128,6 +128,15 @@
                                             placeholder="Enter a region">
                                     </div>
                                 </div>
+                                <div class="detailRow">
+                                    <div class="detailLeft">Checklist : </div>
+                                    <div *ngIf="!disableEdit" class="detailRight"><i class="fa fa-globe"
+                                            style="margin-right: 5px;"></i>
+                                        {{project.checklist}}</div>
+                                    <div *ngIf="disableEdit" class="detailRight">
+                                        <p-multiSelect optionDisabled="inactive" [options]="checkList" [(ngModel)]="selectedChecklist" optionLabel="name"></p-multiSelect>
+                                    </div>
+                                </div>
                             </div>
                         </p-accordionTab>
                         <p-accordionTab header="Description">
