--- a/frontend/src/app/project-details/project-details.component.scss
+++ b/frontend/src/app/project-details/project-details.component.scss
@@ -94,3 +94,15 @@
     margin-right: 20px;
     margin-top: 20px;
 }
+
+:host ::ng-deep .p-multiselect {
+    min-width: 15rem;
+    width: 18rem;
+}
+:host ::ng-deep {
+    @media screen and (max-width: 640px) {
+        .p-multiselect {
+            width: 100%;
+        }
+    }
+}
