--- a/frontend/src/app/project-details/project-details.component.html
+++ b/frontend/src/app/project-details/project-details.component.html
@@ -272,10 +272,10 @@
                                             <ng-template pTemplate="body" let-record>
                                                 <tr>
                                                     <td>{{record.fieldName}}</td>
-                                                    <td>{{record.oldValue}}</td>
-                                                    <td>{{record.newValue}}</td>
-                                                    <td>{{record.FirstName + ' ' + record.LastName}}</td>
-                                                    <td>{{record.updatedDateTime}}</td>
+                                                    <td style="word-break: break-word">{{record.oldValue}}</td>
+                                                    <td style="word-break: break-word">{{record.newValue}}</td>
+                                                    <td style="word-break: break-word">{{record.FirstName + ' ' + record.LastName}}</td>
+                                                    <td style="word-break: break-word">{{record.updatedDateTime}}</td>
                                                 </tr>
                                             </ng-template>
                                         </p-table>
