--- a/frontend/src/app/archive/archive.component.html
+++ b/frontend/src/app/archive/archive.component.html
@@ -186,9 +186,9 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-12">
-                    <label for="checkList" class="control-label">Checklist</label>
-                    <p-multiSelect class="form-control" formControlName="checkList" optionDisabled="inactive"
-                        [options]="checkList" [(ngModel)]="selectedChecklist" optionLabel="name"></p-multiSelect>
+                    <label for="checklist" class="control-label">Checklist</label>
+                    <p-multiSelect class="form-control" formControlName="checklist" optionDisabled="inactive"
+                        [options]="checklist" [(ngModel)]="selectedChecklist" optionLabel="name"></p-multiSelect>
 
                 </div>
             </div>
